@@ -7,6 +7,8 @@ default['circonus']['default_brokers'] = []
 default['circonus']['api_url'] = 'https://api.circonus.com/v2/'
 default['circonus']['cache_path'] = '/var/tmp/chef-circonus'
 default['circonus']['clear_cache_on_start'] = false
+default['circonus']['timeout'] = 10
+
 
 # Used by the circonus::default recipe to generate resources from attributes
 default['circonus']['check_bundles'] = {}
