@@ -1,3 +1,9 @@
+
+
+  * Added HTTP timeout setting as cookbook attribute
+  * MetricScanner drivers for :json and :http check types
+  * Misc improvements to docs and debugging output
+
 2013-08-06 v0.0.8 clinton at omniti dot com
   * Tags support for check bundles
   * Tags support for graphs
